# PyGaugeMC

./: Cargo.toml
jupyter/: AutocorrelationTimes.ipynb  Benchmarks-Copy1.ipynb  Benchmarks.ipynb  BinaryPotential.ipynb  BinaryPotentialTempering.ipynb  Check Replicas.ipynb  Checkblowup.ipynb  Correlations.ipynb  Debug.ipynb  EarlySim.ipynb  GPU Energies.ipynb  GPU-reduction-debug.ipynb  GPUInitialState.ipynb  Leapfrog-Test.ipynb  LinearPotential.ipynb  Machine-Learning-BS.ipynb  ModifiedPotential.ipynb  PairsCorr.ipynb  ParallelTemperingTest.ipynb  SimulatedAnnealing.ipynb  SiteCorr.ipynb  SpecificHeatBig.ipynb  Untitled.ipynb  Untitled1.ipynb  binary_tempering_winding_Var.npz
src/: cpustruct.rs  cudastruct.rs  gpuleapfrog.rs  gpustruct.rs  lib.rs
