[package]
name = "py_gauge_mc"
version = "0.1.0"
authors = ["Sumner Hearth <sumnernh@gmail.com>"]
edition = "2021"

[features]
default = ["gpu-wgpu"]
gpu-wgpu = ["gaugemc/gpu-wgpu", "pollster", "env_logger", "num-traits"]

[lib]
name = "py_gauge_mc"
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
pollster = {version="^0.2",optional=true }
env_logger = {version= ">=0.10",optional=true }
num-traits = {version= ">=0.2",optional=true }
log = ">=0.4"

[dependencies.gaugemc]
git = "https://github.com/Renmusxd/GaugeMC"
features = ["gpu-wgpu"]

[dependencies.pyo3]
version = ">=0.17"
features = ["extension-module"]

[dependencies.numpy]
version = ">=0.17"
