[package]
name = "py_gauge_mc"
version = "0.1.0"
authors = ["Sumner Hearth <sumnernh@gmail.com>"]
edition = "2021"

[features]
default = ["gpu-cuda"]
gpu-wgpu = ["gaugemc/gpu-wgpu", "pollster", "env_logger", "num-traits"]
gpu-cuda = ["gaugemc/gpu-cuda", "env_logger", "cudarc"]

[lib]
name = "py_gauge_mc"
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
pollster = { version = "0.4", optional = true }
cudarc = { version = "*", optional = true, features = ["cuda-version-from-build-system"] }
env_logger = { version = "0.11", optional = true }
num-traits = { version = "0.2", optional = true }
log = "0.4"

[dependencies.gaugemc]
git = "https://github.com/Renmusxd/GaugeMC"
#path = "../GaugeTheoryMC"
default-features = false

[dependencies.pyo3]
version = "0.22"
features = ["extension-module"]

[dependencies.numpy]
version = "0.22"
